# fastapi-daily

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/forms/: FormField.vue  SubmitButton.vue  TextInput.vue
frontend/src/components/layouts/: Title.vue
frontend/src/router/: index.js
frontend/src/views/: Home.vue  Login.vue  Register.vue
src/: main.py
src/api/: __init__.py  dependencies.py  meal.py  user.py  weighting.py
src/models/: meal.py  user.py  weighting.py
src/repositories/: meal.py  weighting.py
src/schemas/: meal.py  user.py  weighting.py
src/services/: meal.py  unitofwork.py  weighting.py
